fourth commit-hashing using bcryptjs

--- a/templates/views/welcome.hbs
+++ b/templates/views/welcome.hbs
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-      <h1 class="wel">Welcome to MERN stack</h1>
+      <h1 class="wel">Succesfully logged in</h1>
 </body>
 </html>
