--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -1,40 +1,72 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Registration form</title>
-</head>
-<body>  <div class="container">
-        <form class="form" id="login" method="post" action="/form">
-            <h1 class="form__title">Register Form</h1>
-            <div class="form__message form__message--error"></div>
-            <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Username" name="name">
-                <div class="form__input-error-message"></div>
-            </div>
-             <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Email" name="email">
-                <div class="form__input-error-message"></div>
-            </div>
-            <div class="form__input-group">
-                <input type="text" class="form__input" autofocus placeholder="Phone Number" name="phone">
-                <div class="form__input-error-message"></div>
-            </div>
-            <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Password" name="password">
-                <div class="form__input-error-message"></div>
-            </div>
-             <div class="form__input-group">
-                <input type="password" class="form__input" autofocus placeholder="Confirm Password" name="confirmpassword">
-                <div class="form__input-error-message"></div>
-            </div>
-            <button class="form__button" type="submit">Register</button>
-             <p class="form__text">
-                <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
-            </p>
+  </head>
+  <body>
+    <div class="container">
+      <form class="form" id="login" method="post" action="/register">
+        <h1 class="form__title">Register Form</h1>
+        <div class="form__message form__message--error"></div>
+        <div class="form__input-group">
+          <input
+            type="text"
+            class="form__input"
+            autofocus
+            placeholder="Username"
+            name="name"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+          <input
+            type="text"
+            class="form__input"
+            autofocus
+            placeholder="Email"
+            name="email"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+          <input
+            type="text"
+            class="form__input"
+            autofocus
+            placeholder="Phone Number"
+            name="phone"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+          <input
+            type="password"
+            class="form__input"
+            autofocus
+            placeholder="Password"
+            name="password"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <div class="form__input-group">
+          <input
+            type="password"
+            class="form__input"
+            autofocus
+            placeholder="Confirm Password"
+            name="confirmpassword"
+          />
+          <div class="form__input-error-message"></div>
+        </div>
+        <button class="form__button" type="submit">Register</button>
+        <p class="form__text">
+          <a class="form__link" href="./" id="linkLogin">
+            Already have an account? Sign in</a>
+        </p>
+      </form>
     </div>
-</body>
+  </body>
 </html>
